# Parking-Place-Surveillance

./: .gitignore  .gitlab-ci.yml  .gitlab-cy.yml  ParkingSpotStatus.py  README.md  car_detections.json  parking_spot_status.py  pyproject.toml  scope.md
api/: DataCommunicator.py  FlaskAPI.py  api.py  dummy_data.py  fastapi.py  flask_api.py
app/: app.py
controller/: CameraController.py  camera_controller.py  data_communicator.py  dummy_data.json  input_controller.py
frontend/: .babelrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/__test__/: frontend.test.tsx
frontend/public/: mockData.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  ParkingSpot.tsx
processing/: ImageProcessor.py  OpenCVImageProcessor.py  ParkingSpotDetector.py  TPUImageProcessor.py  TPU_image_processor.py  dummy_image_processor.py  image_processor.py  opencv_image_processor.py  parking_spot_detector.py
scheduling/: scheduler.py
tests/: README.md  junit.xml  pytest_report.html  test_parking_spot_status.py
tests/api_tests/: test_fastapi.py
tests/app_tests/: test_app.py
tests/controller_tests/: test_camera_controller.py  test_data_communicator.py  test_input_controller.py
tests/processing_tests/: test_dummy_image_processor.py  test_image_processor.py  test_opencv_image_processor.py  test_parking_spot_detector.py  test_tpu_image_processor.py
tests/scheduling_tests/: test_scheduler.py
