[tool.poetry]
name = "parkingsurveillance"
version = "0.1.0"
description = ""
authors = ["Leopold Keller <leopold.keller@stud.h-da.de>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0"
Flask = "^3.1.0"
tflite = "^2.10.0"
pydantic = "^2.9.2"
pylance = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
