[tool.poetry]
name = "parkingsurveillance"
version = "0.1.0"
description = ""
authors = ["Leopold Keller <leopold.keller@stud.h-da.de>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0"
fastapi = "^0.100.0"  # Aktualisierte Version von FastAPI
uvicorn = "^0.18.0"
tflite = "^2.10.0"
pydantic = "^2.9.2"
pylance = "^0.19.2"
numpy = "^1.26.4"
Flask-Cors = "^5.0.0"
pycoral = "^0.2.0"
SimpleITK = "^2.4.0"
pytest = "^8.3.4"
pytest-html = "^4.1.1"
torch = "2.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
